log entry repository