@@ -3,18 +3,19 @@ package com.github.bgalek.hackserver.application.challenge;
 import com.github.bgalek.hackserver.application.challenge.api.ChallengeDefinition;
 import com.google.cloud.firestore.CollectionReference;
 import com.google.cloud.firestore.Firestore;
-import com.google.cloud.firestore.QueryDocumentSnapshot;
-import com.google.cloud.firestore.QuerySnapshot;
+import org.apache.commons.lang3.NotImplementedException;
 import org.springframework.stereotype.Component;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 @Component
 class FirebaseChallengeRepository implements ChallengeRepository {
 
     private final CollectionReference challengeCollection;
+    private final Map<String, ChallengeDefinition> runtimeCollection = new HashMap<>();
 
     public FirebaseChallengeRepository(Firestore firestore) {
         this.challengeCollection = firestore.collection("challenges");
@@ -22,13 +23,7 @@ class FirebaseChallengeRepository implements ChallengeRepository {
 
     @Override
     public List<ChallengeDefinition> findAll() {
-        try {
-            QuerySnapshot querySnapshot = challengeCollection.get().get();
-            List<QueryDocumentSnapshot> documents = querySnapshot.getDocuments();
-            return documents.stream().map(this::deserialize).collect(Collectors.toList());
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+        return runtimeCollection.values().stream().toList();
     }
 
     @Override
@@ -36,8 +31,14 @@ class FirebaseChallengeRepository implements ChallengeRepository {
         String id = challengeCollection.document().getId();
         try {
             challengeCollection.document(id).create(serialize(challengeDefinition)).get();
+            runtimeCollection.put(challengeCollection.getId(), challengeDefinition);
         } catch (InterruptedException | ExecutionException e) {
             throw new RuntimeException(e);
         }
+    }
+
+    @Override
+    public void activate(ChallengeDefinition challengeDefinition) {
+        throw new NotImplementedException("Not implemented yet");
     }
 }
